--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
@@ -24,6 +24,8 @@
     @Html.HiddenFor(q => q.IdOrdenPago)
     @Html.HiddenFor(q => q.IdEntidad)
     @Html.HiddenFor(q => q.IdPersona)
+    @Html.HiddenFor(q => q.info_comprobante.IdTipoCbte)
+    @Html.HiddenFor(q => q.info_comprobante.IdCbteCble)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
