--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
@@ -25,6 +25,8 @@
     @Html.HiddenFor(q => q.IdOrdenPago)
     @Html.HiddenFor(q => q.IdEntidad)
     @Html.HiddenFor(q => q.IdPersona)
+    @Html.HiddenFor(q => q.info_comprobante.IdTipoCbte)
+    @Html.HiddenFor(q => q.info_comprobante.IdCbteCble)
 
 
     <div class="row">
