--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
@@ -6,6 +6,7 @@
         settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_aprobacion_facturas" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_aprobacion_facturas_Update" };
         settings.KeyFieldName = "IdCbteCble_Ogiro";
+        settings.Width = Unit.Percentage(100);
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = false;
