--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_nota_credito_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/_GridViewPartial_nota_credito_det.cshtml
@@ -9,8 +9,8 @@
 
 
         settings.SettingsEditing.Mode = GridViewEditingMode.EditForm;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "NotaCredito", Action = "EditingUpdate_op", Area = "CeuntasPorPagar" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "NotaCredito", Action = "EditingDelete_op", Area = "CeuntasPorPagar" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "NotaCredito", Action = "EditingUpdate_op", Area = "CuentasPorPagar" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "NotaCredito", Action = "EditingDelete_op", Area = "CuentasPorPagar" };
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowEditButton = true;
