--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
@@ -43,7 +43,7 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 $("#myform").submit();
-
+                GridViewPartial_aprobacion_facturas.PerformCallback();
             },
             error: function (error) {
             }
