--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Anular.cshtml
@@ -218,12 +218,19 @@
                                     <div class="col-md-12">
                                         <div class="col-md-2">
                                             <div class="form-group">
-                                                <label for="cn_subtotal_iva">Base IVA</label>
+                                                <label for="cn_subtotal_iva">Subtotal IVA</label>
                                                 @Html.TextBoxFor(q => q.cn_subtotal_iva, new { @class = "form-control", @id = "cn_subtotal_iva" })
                                                 @Html.ValidationMessageFor(q => q.cn_subtotal_iva, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
 
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label for="cn_subtotal_siniva">Subtotal cero</label>
+                                                @Html.TextBoxFor(q => q.cn_subtotal_siniva, new { @class = "form-control", @id = "cn_subtotal_siniva" })
+                                                @Html.ValidationMessageFor(q => q.cn_subtotal_siniva, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
                                         <div class="col-md-2">
                                             <div class="form-group">
                                                 <label for="cn_subtotal_iva">% IVA</label>
@@ -238,13 +245,6 @@
                                                 @Html.ValidationMessageFor(q => q.cn_valoriva, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
-                                        <div class="col-md-2">
-                                            <div class="form-group">
-                                                <label for="cn_subtotal_siniva">Base cero</label>
-                                                @Html.TextBoxFor(q => q.cn_subtotal_siniva, new { @class = "form-control", @id = "cn_subtotal_siniva" })
-                                                @Html.ValidationMessageFor(q => q.cn_subtotal_siniva, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
 
                                         <div class="col-md-2">
                                             <div class="form-group">
@@ -256,7 +256,6 @@
 
                                     </div>
                                 </div>
-
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="col-md-12">
