--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/_GridViewPartial_movimiento_egresos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/_GridViewPartial_movimiento_egresos.cshtml
@@ -76,7 +76,7 @@
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
         settings.Columns.Add("IdCbteCble", "#Cbte").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("ca_Descripcion", "Caja").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+        settings.Columns.Add("ca_Descripcion", "Caja").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "cm_fecha";
@@ -84,6 +84,7 @@
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
         });
+        settings.Columns.Add("tm_descripcion", "Tipo").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto", "Beneficiario").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add("cm_observacion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add(column =>
