--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/Modificar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.Banco.ba_tipo_nota_Info
 
 @{
-    ViewBag.Title = "Nuevo tipo";
+    ViewBag.Title = "Modificar tipo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -9,7 +9,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("Nuevo", "TipoNotaBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Modificar", "TipoNotaBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTipoNota)
