--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
@@ -79,7 +79,7 @@
         });
         
         settings.Columns.Add("IdBanco", "Código").Width = Unit.Percentage(15);
-        settings.Columns.Add("Num_cheque", "Número cheque").Width = Unit.Percentage(15);\
+        settings.Columns.Add("Num_cheque", "Número cheque").Width = Unit.Percentage(15);
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(15);
     });
 }
