--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
@@ -12,6 +12,8 @@
 @using (Html.BeginForm("Nuevo", "TalonarioChequeBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdBanco)
+    @Html.HiddenFor(q => q.Num_cheque)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
@@ -45,7 +47,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="Estado_bool">Número de cheque</label>
-                    @Html.TextBoxFor(q => q.Num_cheque, new { @class = "form-control" , @id="Num_cheque"})
+                    @Html.TextBoxFor(q => q.Num_cheque, new { @class = "form-control", @id = "Num_cheque" })
                     @Html.ValidationMessageFor(q => q.Num_cheque, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -73,7 +75,7 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
-    <script>
+<script>
 
             $("#Num_cheque").change(function () {
                 get_NumeroCheque();
@@ -104,4 +106,4 @@
         }
     }
 
-        </script>
+</script>
