--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Modificar.cshtml
@@ -13,6 +13,7 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdBanco)
+    @Html.HiddenFor(q => q.Num_cheque)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
