--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/_GridViewPartial_cheque.cshtml
@@ -4,7 +4,7 @@
         settings.Name = "GridView_cheque";
         settings.CallbackRouteValues = new { Controller = "ChequeBanco", Action = "GridViewPartial_cheque", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin, IdSucursal = ViewBag.IdSucursal };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdCobro";
+        settings.KeyFieldName = "IdCbteCble";
 
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -46,7 +46,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("cr_estado")) == "I")
+            if (Convert.ToString(e.GetValue("Estado")) == "I")
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -56,11 +56,11 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "cr_estado")) == "A")
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdCobro = DataBinder.Eval(tc.DataItem, "IdCobro") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdCobro = DataBinder.Eval(tc.DataItem, "IdCobro") },
+                Html.ActionLink("Modificar", "Modificar", new { IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdTipocbte = DataBinder.Eval(tc.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(tc.DataItem, "IdCbteCble") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -76,28 +76,29 @@
             c.Width = Unit.Pixel(150);
         });
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
-        settings.Columns.Add("IdCobro", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(30);
+        settings.Columns.Add("IdCbteCble", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("cb_Cheque", "# Cheque").Width = Unit.Percentage(7);
+        settings.Columns.Add("cb_giradoA", "Beneficiario").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "cr_fecha";
+            column.FieldName = "cb_Fecha";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(10);
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "cr_TotalCobro";
-            column.Caption = "Total";
+            column.FieldName = "cb_Valor";
+            column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
         });
-        settings.Columns.Add("cr_estado", "Estado").Width = Unit.Percentage(5);
+        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXC_001", "CuentasPorCobrarReportes", new { Area = "Reportes", IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdCobro = DataBinder.Eval(c.DataItem, "IdCobro") }, Request.Url.Scheme) + "');\"></span>");
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("BAN_003", "BancoReportes", new { Area = "Reportes", IdTipocbte = DataBinder.Eval(c.DataItem, "IdTipocbte"), IdCbteCble = DataBinder.Eval(c.DataItem, "IdCbteCble") }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = Unit.Percentage(5);
         });
