--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
@@ -26,23 +26,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdBanco">Banco*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdBanco, settings =>
-               {
-                   settings.Name = "IdBanco";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdBanco", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("ba_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdBanco";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "ba_descripcion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_id();}";
-               }).BindList(ViewBag.lst_banco).GetHtml()
+                    @Html.DropDownListFor(q=>q.IdBanco, new SelectList(ViewBag.lst_banco, "IdBanco" , "ba_descripcion"), new { @class="form-control", @id="IdBanco"})
                     @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -70,6 +54,20 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="Cantidad">Cantidad*</label>
+                    @Html.TextBoxFor(q => q.Cantidad, new { @class = "form-control", @id = "Cantidad" })
+                    @Html.ValidationMessageFor(q => q.Cantidad, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="Documentofinal">Documento final*</label>
+                    @Html.TextBoxFor(q => q.Documentofinal, new { @class = "form-control", @id = "Documentofinal" })
+                    @Html.ValidationMessageFor(q => q.Documentofinal, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
     </div>
 
@@ -87,11 +85,18 @@
             $("#IdBanco").change(function () {
                 get_id();
             });
+            $("#Cantidad").change(function () {
+                set_documentofinal();
+            });
+            $("#Documentofinal").change(function () {
+                set_documentofinal();
+            });
         });
 
     function get_id(){
 
-        var id = IdBanco.GetValue();
+        var id = $("#IdBanco").val();
+        
         var datos = {
             IdBanco: id
         }
@@ -106,11 +111,22 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
 
-                $("#Num_cheque").val();
+                $("#Num_cheque").val(data);
             },
             error: function (error) {
             }
         });
-    };
+        };
+
+        function set_documentofinal() {
+            var cantidad = Number($("#Cantidad").val());
+            var doc_inicial = Number($("#Num_cheque").val());
+
+            var docfinal = "" + (doc_inicial + cantidad - 1)
+            var pad = "000000000";
+            var doc = pad.substring(0, pad.length - docfinal.length) + docfinal;
+
+            $("#Documentofinal").val(doc);
+        }
 
     </script>
