--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_CmbProducto_EgresoInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_CmbProducto_EgresoInventario.cshtml
@@ -2,26 +2,26 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdEntidad";
+        settings.Name = "IdProducto";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ConciliacionCaja", Action = "CmbPersona_ConciliacionCaja", Area = "Caja" };
+        settings.CallbackRouteValues = new { Controller = "EgresoInventario", Action = "CmbProducto_EgresoInventario", Area = "Inventario" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
-        settings.Properties.TextFormatString = "[{0}] {1}";
-        settings.Properties.ValueField = "IdEntidad";
+        settings.Properties.TextFormatString = "[{1}] {2}";
+        settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
 
-        settings.Properties.Columns.Add("IdEntidad", "ID", 10);
-        settings.Properties.Columns.Add("pe_nombreCompleto", "Persona", 80);
-        settings.Properties.Columns.Add("IdPersona", "ID Persona", 10);
+        settings.Properties.Columns.Add("IdProducto", "ID", 10);
+        settings.Properties.Columns.Add("pr_codigo", "Código", 10);
+        settings.Properties.Columns.Add("pr_descripcion", "Producto", 80);
+
 
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipoPersona').val(); }";
     })
-    .BindList(new Core.Erp.Web.Areas.Caja.Controllers.ConciliacionCajaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Caja.Controllers.ConciliacionCajaController().get_info_bajo_demanda)
-    //.BindList(ViewBag.lst_persona)
+   // .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Inventario.Controllers.EgresoInventarioController().get_info_bajo_demanda)
     .Bind(Model.IdEntidad);
 
 }
